--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "firebase": "^11.9.1",
     "lucide-react": "^0.516.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
