--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.516.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
